--- a/gmsn/src/App.css
+++ b/gmsn/src/App.css
@@ -5,6 +5,7 @@
 body {
   margin:0;
   font-family: Inter;
+  background-color: #282d35;
 }
 
 nav {
@@ -37,3 +38,41 @@ nav {
   height: 30px;
   margin-right: 7px;
 }
+ main {
+    padding:57px 27px;
+ }
+
+ h1 {
+    margin: 0;
+ }
+
+ main {
+  padding:57px 27px;
+  color: white;
+ }
+
+ .main--title {
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05em;
+
+ }
+
+ .main--facts {
+
+    margin-top: 46px;
+ }
+
+ .main--facts > li {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+ } 
+
+ ::marker{
+  color:#61DAFB;
+  font-size: 1.2em;
+
+ }
