--- a/gmsn/src/App.css
+++ b/gmsn/src/App.css
@@ -49,13 +49,15 @@ nav {
  main {
   padding:57px 27px;
   color: white;
+  background-image: url(./images/logo192.png);
+  background-repeat: no-repeat;
+  background-position: right 75%;
  }
 
  .main--title {
   margin: 0;
   font-size: 39px;
   letter-spacing: -0.05em;
-
  }
 
  .main--facts {
@@ -68,11 +70,11 @@ nav {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 29px;
  } 
 
  ::marker{
   color:#61DAFB;
-  font-size: 1.2em;
+  font-size: 1.5rem;
 
  }
